--- a/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
+++ b/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
@@ -1,4 +1,4 @@
-HomePageURL=http://www.test1.selfridges.com/en/mens/?llc=tn
+HomePageURL=http://www.test1.selfridges.com/
 Browser=Mozilla
 Email=creddy2014@gmail.com
 Password=Password1
