--- a/selfridges.online.relaunch/pom.xml
+++ b/selfridges.online.relaunch/pom.xml
@@ -90,6 +90,7 @@
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium.version}</version>
+            <!-- version>${selenium.version}</version> -->
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
