Few changes in WebController class

--- a/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
+++ b/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
@@ -1,5 +1,5 @@
 HomePageURL=http://www.test1.selfridges.com/
 Browser=Mozilla
-Email=creddy2014@gmail.com
+Email=vijay.20886@gmail.com
 Password=Password1
-First_Name=Chiran
+First_Name=Vijay
