Commit made at 27/02/15, 17:04

--- a/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
+++ b/selfridges.online.relaunch/src/main/java/com/selfridges/config/ENV_TEST1.properties
@@ -1,4 +1,5 @@
-HomePageURL=http://www.test1.selfridges.com/
+HomePageURL=http://selfridges:passw0rdselfridges@www.test1.selfridges.com/test-site-access/forbidden.html
+#HomePageURL=http://www.selfridges.com
 Browser=Mozilla
 Email=vijay.20886@gmail.com
 Password=Password1
